<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="opciones">Escoge el nivel</string>
    <string name="categoria">Seleccione la categoria</string>
    <string name="varios">Varios</string>
    <string name="frutas">Frutas</string>
    <string name="animales">Animales</string>

    <string-array name="os_arrays">
        <item>Nivel 1</item>
        <item>Nivel 2</item>
        <item>Nivel 3</item>
    </string-array>

    <string name="title_activity_second">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tree">TreeActivity</string>
    <string name="title_activity_four">FourActivity</string>

</resources>
